added Jessie and Veronique edits, New image Circuit race

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 		<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
 			<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;" class="">
 			<center style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;width: 100%;"><!-- Visually Hidden Preheader Text : BEGIN -->
-			<div style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family: sans-serif;">Building with love and passion for over 44 years | Voted #1 Best New Builder in the 2019 Fresno Bee's People's Choice Awards</div>
+			<div style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;display:none;font-size:1px;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;mso-hide:all;font-family: sans-serif;">Building with love and passion for over 40 years | Voted #1 Best New Builder in the 2019 Fresno Bee's People's Choice Awards</div>
 			<!-- Visually Hidden Preheader Text : END --><!-- Email Header : BEGIN --></center>
 			</td>
 		</tr>
@@ -349,7 +349,7 @@
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;background-color: #ffffff !important;">
 						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:30px; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 16px; mso-height-rule: exactly; line-height: 1.5em; color: #252525; margin-bottom: 10px;" class="">
 						<div class="heading-section"><span class="subheading" style="display:inline-block;font-size:20px;text-transform: none; letter-spacing:.5px;color:#074975;position:relative;text-align: center !important;"><b>Refinance Your Mortgage Today and Save</b> </span>
-						<p class="bodyContent" style="font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 14px; mso-height-rule: exactly; line-height: 2em; color: #252525; margin-bottom: 10px; text-align: left;">Granville Home Loans' experienced loan officers will guide you step-by-step through the refinance process, and are committed to serving you with the same award-winning customer service that Granville Homes has built its reputation on for over 40 years. Take advantage of near-historic-low interest rates, to reduce your payment or save thousands off the life of your loan by visiting Granville Home Loans today.
+						<p class="bodyContent" style="font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 14px; mso-height-rule: exactly; line-height: 2em; color: #252525; margin-bottom: 10px; text-align: left;">Granville Home Loans' experienced loan officers will guide you step-by-step through the refinance process, and are committed to serving you with the same award-winning customer service that Granville Homes has built its reputation on for over 44 years. Take advantage of near-historic-low interest rates, to reduce your payment or save thousands off the life of your loan by visiting Granville Home Loans today.
 						&nbsp;</p>
 						<!-- Button : BEGIN -->
 
@@ -398,7 +398,7 @@
 					<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;background-color: #ffffff !important;">
 						<td style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding:30px; text-align: left;  font-family: 'Montserrat', Helvetica, Arial, 'sans-serif' !important; font-size: 16px; mso-height-rule: exactly; line-height: 1.5em; color: #252525; margin-bottom: 10px;" class="">
 						<div class="heading-section"><span class="subheading" style="display:inline-block;font-size:20px;text-transform:none;letter-spacing:.5px;color:#074975;position:relative;text-align: center !important;"><b>The Health of Your Family is Important to Us</b> </span>
-						<p style="margin-top: 10px; margin-right: 0px; margin-left: 0px;"><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; text-align: center; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">As part of the Granville Family, the health of you and your family is extremely important to us. Below are a few links to schedule your COVID-19 vaccine appointment. Appointments are now available for all individuals over 16 years of age. If you or your family members need assistance with making an appointment, please feel free to reach out to us, and we would be happy to help you schedule an appointment. For vaccine assistance, please contact alannah.lones@gvhomes.com or (559) 492-4049 and ask for Alannah.</span></p>
+						<p style="margin-top: 10px; margin-right: 0px; margin-left: 0px;"><span class="bodyContent" style="font-size: 12pt; line-height: 1.8em; color: rgb(37, 37, 37); margin-bottom: 10px; text-align: center; font-family: Montserrat, Helvetica, Arial, sans-serif !important;">As part of the Granville Family, the health of you and your family is extremely important to us. Below are a few links to schedule your COVID-19 vaccine appointment. Appointments are now available for all individuals over 16 years of age. If you or your family members need assistance with making an appointment, please feel free to reach out to us, and we would be happy to help you schedule an appointment. For vaccine assistance, please email alannah.lones@gvhomes.com or call (559) 492-4049 and ask for Alannah.</span></p>
 
 
 						<!-- Button : BEGIN -->
@@ -482,7 +482,7 @@
 								</tr>
 								<!--Header End-->
 								<tr style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
-									<td align="center" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding: 0px; text-align: center; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 1.8em; font-weight: 600; color: #ffffff;" valign="top" class=""><a href="https://www.gvhomes.com/communities/ventana-hills/" target="_blank"><img alt="Granville Homes Circuit Race at Ventana Hills" class="fluid-centered" height="300" src="https://storage.pardot.com/857603/16182618744Nb7r59a/VH_CircutRace_Email1_600x300.jpg" style="width: 600px; height: 300px;" width="600"> </a></td>
+									<td align="center" style="-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;mso-table-lspace:0pt !important;mso-table-rspace:0pt !important;padding: 0px; text-align: center; font-family: 'Montserrat', Helvetica, Arial, 'sans-serif'; font-size: 1.8em; font-weight: 600; color: #ffffff;" valign="top" class=""><a href="https://www.gvhomes.com/communities/ventana-hills/" target="_blank"><img alt="Granville Homes Circuit Race at Ventana Hills" class="fluid-centered" height="300" src="http://go.pardot.com/l/857603/2021-04-22/v42xv/857603/1619130188VTqS7PPr/circuit_race_at_ventana_hills_email_hero_600x300px.png" style="width: 600px; height: 300px;" width="600"> </a></td>
 								</tr>
 							</tbody>
 						</table>
